WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139874
[iOS] Log using FeatureCounter when a PacheCache fails due to memory pressure
https://bugs.webkit.org/show_bug.cgi?id=139874
Summary
[iOS] Log using FeatureCounter when a PacheCache fails due to memory pressure
Chris Dumez
Reported
2014-12-22 13:21:00 PST
Log using FeatureCounter when a PacheCache fails due to memory pressure. Radar: <
rdar://problem/19255690
>
Attachments
Patch
(5.96 KB, patch)
2014-12-22 13:35 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2014-12-22 13:35:03 PST
Created
attachment 243637
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-22 23:23:20 PST
Comment on
attachment 243637
[details]
Patch Clearing flags on attachment: 243637 Committed
r177680
: <
http://trac.webkit.org/changeset/177680
>
WebKit Commit Bot
Comment 3
2014-12-22 23:23:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug