[iOS] Log using FeatureCounter when a PacheCache fails due to memory pressure https://bugs.webkit.org/show_bug.cgi?id=139874 <rdar://problem/19255690>

Reviewed by Darin Adler.

Log using FeatureCounter when a PacheCache fails due to memory
pressure. To detect this, a flag is added to HistoryItem to mark
items that are no longer in the page becaused they were pruned
(either because of a low memory handling or because the page cache
reached its maximum capacity).

* history/HistoryItem.cpp:
(WebCore::HistoryItem::HistoryItem):
* history/HistoryItem.h:
* history/PageCache.cpp:
(WebCore::PageCache::add):
(WebCore::PageCache::take):
(WebCore::PageCache::get):
(WebCore::PageCache::prune):
* platform/FeatureCounterKeys.h:


Canonical link: https://commits.webkit.org/157838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177680 268f45cc-cd09-0410-ab3c-d52691b4dbfc