Source/WebCore/history/PageCache.cpp
@@ -445,6 +445,7 @@ void PageCache::add(PassRefPtr<HistoryItem> prpItem, Page& page)
         remove(item);
 
     item->m_cachedPage = std::make_unique<CachedPage>(page);
+    item->m_wasPruned = false;
     addToLRUList(item);
     ++m_size;
     
@@ -463,8 +464,11 @@ std::unique_ptr<CachedPage> PageCache::take(HistoryItem* item, Page* page)
 
     item->deref(); // Balanced in add().
 
-    if (!cachedPage)
+    if (!cachedPage) {
+        if (item->m_wasPruned)
+            FEATURE_COUNTER_INCREMENT_KEY(page, FeatureCounterPageCacheFailureWasPrunedKey);
         return nullptr;
+    }
 
     if (cachedPage->hasExpired()) {
         LOG(PageCache, "Not restoring page for %s from back/forward cache because cache entry has expired", item->url().string().ascii().data());
@@ -487,7 +491,9 @@ CachedPage* PageCache::get(HistoryItem* item, Page* page)
         LOG(PageCache, "Not restoring page for %s from back/forward cache because cache entry has expired", item->url().string().ascii().data());
         FEATURE_COUNTER_INCREMENT_KEY(page, FeatureCounterPageCacheFailureExpiredKey);
         pageCache()->remove(item);
-    }
+    } else if (item->m_wasPruned)
+        FEATURE_COUNTER_INCREMENT_KEY(page, FeatureCounterPageCacheFailureWasPrunedKey);
+
     return nullptr;
 }
 
@@ -508,6 +514,7 @@ void PageCache::prune()
 {
     while (m_size > m_capacity) {
         ASSERT(m_tail && m_tail->m_cachedPage);
+        m_tail->m_wasPruned = true;
         remove(m_tail);
     }
 }
